# maskgeo

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: test.yml
docs/superpowers/plans/: 2026-04-26-maskgeo-v1.0.0.md
docs/superpowers/specs/: 2026-04-26-maskgeo-design.md
src/maskgeo/: __init__.py  _color.py  convert.py  processor.py
tests/: conftest.py  test_color.py  test_convert.py  test_geojson_processor.py  test_pixel_edge.py  test_polygon_processor.py
tests/data/: multilabel.geojson  multilabel.ome.tiff  multilabel_qupath_export.geojson  rect.geojson  rect.ome.tiff
