[project]
name = "maskgeo"
version = "1.0.0"
description = "Convert between segmentation masks and pixel-edge polygons (GeoJSON)"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [{ name = "wuwenrui555", email = "wuwenruiwwr@outlook.com" }]
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.21",
    "rasterio>=1.4",
    "shapely>=2.0",
    "geopandas>=1.0",
    "pyratiff>=1.0",
    "matplotlib>=3",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/maskgeo"]

[tool.uv.sources]
pyratiff = { git = "https://github.com/wuwenrui555/pyratiff.git" }
